test/negative/504_continue_outside_loop.err
504_continue_outside_loop.fx:2:11: error: cannot use 'continue' outside of loop

1 errors occured during type checking.
